# face-analyzer-streamlit

./: pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
app/core/: VideoProcessor.py
