[project]
name = "ml-hgface-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilnaz"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "streamlit (>=1.52.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "imageio (>=2.37.2,<3.0.0)",
    "imageio[ffmpeg] (>=2.37.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
